# devalbo-cli

./: .gitignore  CREATE_AN_APP.md  MIGRATE_BRAND_IMPL.md  PLAN_12_a_PREP_CREATE_AN_APP.md  PLAN_15_REFACTOR_FOR_INTEGRATION.md  PLAN_16_PACKAGING.md  PLAN_3_TEST_SUITE.md  PLAN_4_PHASE_3_REVIEW.md  PLAN_4_SOLID_INTEGRATION.md  PLAN_5_IMPL.md  PLAN_5_SOLID_UI.md  PLAN_6_SOLID_INFRA.md  PLAN_6_SOLID_INFRA_DRAFT.md  PLAN_MAINTENANCE.md  PRE_4_MAINTENANCE.md  README.md  RESEARCH.md  START_NEW_APP.md  UNITS_BRAND_IMPL.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.npm.json  tsup.config.ts  vite.config.ts  vitest.workspace.ts
.changeset/: config.json
ci/: repackaging-matrix.json
devalbo-editor/: package-lock.json  package.json  vitest.workspace.ts
devalbo-editor/apps/naveditor-desktop/src-tauri/: Cargo.toml
devalbo-editor/apps/naveditor-desktop/src-tauri/src/: main.rs
docs/: BRANDED_TYPES.md  DEPLOYMENT_AND_OPERATION.md  DESIGN_AND_DEVELOPMENT.md  SETUP_NEW.md  TESTING.md  TOOLING.md  UNDER_CONSIDERATION.md  mermaid-test.md
editor-lib/: package.json  tsconfig.json
examples/: commands-registry.ts  filesystem-memory.ts  worker-bridge.ts
naveditor/: .gitignore  package.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
naveditor-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
naveditor-lib/: package.json  tsconfig.json
naveditor-terminal/: package.json  tsconfig.json
naveditor-web/: index.html  package.json  tsconfig.json  vite.config.ts
src/: cli-shell.ts  (+9 more)
(+285 files in other folders)
