[package]
name = "naveditor_desktop"
version = "0.1.0"
description = "Desktop file explorer for naveditor"
authors = ["devalbo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
